rendered/envs/zoo/vaultwarden/namespace-vaultwarden.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    a8r.io/repository: git@github.com:kbudde/lab.git
  name: vaultwarden
  namespace: vaultwarden
