rendered/envs/zoo/vaultwarden/ingress-vaultwarden.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    a8r.io/repository: git@github.com:kbudde/lab.git
    ingress.kubernetes.io/rewrite-target: /
    ingress.kubernetes.io/ssl-redirect: "true"
  labels:
    app.kubernetes.io/component: vaultwarden
    app.kubernetes.io/instance: vaultwarden
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: vaultwarden
    app.kubernetes.io/version: 1.29.2-alpine
    helm.sh/chart: vaultwarden-0.14.0
  name: vaultwarden
  namespace: vaultwarden
spec:
  rules:
    - host: vault.budd.ee
      http:
        paths:
          - backend:
              service:
                name: vaultwarden
                port:
                  name: http
            path: /
            pathType: Prefix
          - backend:
              service:
                name: vaultwarden
                port:
                  name: websocket
            path: /notifications/hub
            pathType: Exact
  tls:
    - hosts:
        - vault.budd.ee
      secretName: null
